--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,19 @@ keywords = ["gmail", "email", "gmail-api"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-google-api-python-client = "^2.97.0"
-python-decouple = "^3.5"
-google-auth-httplib2 = ">=0.1,<0.3"
-google-auth-oauthlib = ">=0.4.6,<1.3.0"
+google-api-python-client = "^2.137.0"
+python-decouple = "^3.8"
+google-auth-httplib2 = "^0.2.0"
+google-auth-oauthlib = "^1.2.1"
 click = "^8.1.7"
-markdown = "^3.5.1"
+markdown = "^3.6"
 
 [tool.poetry.scripts]
 gmail-draft-creator = "gmail_draft_creator:main"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.1.1"
-isort = "^5.12.0"
+black = "^24.4.2"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
