--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gmail_draft_creator"
+name = "gmail_digest"
 version = "1.3.1"
 description = "Simple tool to take a CSV and a template and create drafts in your Gmail. Can be used as a command line tool, or as a library."
 authors = ["Michael Bianco <mike@mikebian.co>"]
@@ -21,7 +21,7 @@ click = "^8.1.7"
 markdown = "^3.6"
 
 [tool.poetry.scripts]
-gmail-draft-creator = "gmail_draft_creator:main"
+gmail-draft-creator = "gmail_digest:main"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
