--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.1"
 click = "^8.1.7"
 markdown = "^3.6"
+funcy-pipe = "^0.11.0"
+openai = "^1.37.0"
+structlog = "^24.4.0"
 
 [tool.poetry.scripts]
 gmail-draft-creator = "gmail_digest:main"
