basic apscheduler config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ markdown = "^3.6"
 funcy-pipe = "^0.11.0"
 openai = "^1.37.0"
 structlog = "^24.4.0"
+apscheduler = "^3.10.4"
 
 [tool.poetry.scripts]
 gmail-draft-creator = "gmail_digest:main"
