--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,23 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit"
   },
+  // "[python]": {
+  //   // https://discuss.python.org/t/autopep8-isort-how-do-i-sort-using-autoformatting-absolute-imports-for-user-defined-modules-in-vs-code/20973
+  //   "editor.defaultFormatter": "ms-python.python"
+  // },
+
   "[python]": {
-    // https://discuss.python.org/t/autopep8-isort-how-do-i-sort-using-autoformatting-absolute-imports-for-user-defined-modules-in-vs-code/20973
-    "editor.defaultFormatter": "ms-python.python"
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "explicit"
+    },
   },
+
   "[toml]": {
-    "editor.defaultFormatter": "tamasfe.even-better-toml"
+    "editor.defaultFormatter": "tamasfe.even-better-toml",
+    "editor.formatOnSave": true,
+    "editor.tabSize": 4
   },
   // "python.linting.lintOnSave": true,
   // "python.linting.pylintEnabled": true,
