--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ structlog = "^24.4.0"
 apscheduler = "^3.10.4"
 
 [tool.poetry.scripts]
-gmail-draft-creator = "gmail_digest:main"
+gmail-digest = "gmail_digest:main"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
@@ -49,7 +49,6 @@ exclude = '''
 # when changing this config, you need to restart your vscode isort server
 [tool.isort]
 profile = "black"
+float_to_top = true
 multi_line_output = 3
-sections = "SETUP,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,PRISMA,LOCALFOLDER"
-known_setup = "python.setup"
-known_prisma = "prisma"
+sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
