--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -16,8 +16,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: ASDF Parse
         uses: kota65535/github-asdf-parse-action@v2.0.0
@@ -39,7 +37,7 @@ jobs:
 
       - name: Make sure it runs
         run: |
-          poetry run gmail-draft-creator --help
+          poetry run ${{ github.event.repository.name }} --help
 
       - name: Conventional Changelog Action
         id: changelog
@@ -71,8 +69,9 @@ jobs:
           body: ${{ steps.changelog.outputs.clean_changelog }}
           tag_name: ${{ steps.changelog.outputs.tag }}
 
-      - name: Sync Repository Metadata
-        # uses: kbrashears5/github-action-repo-sync@v1.0.0
-        uses: iloveitaly/github-action-repo-sync@python
+      - name: Build and push Docker images
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        uses: iloveitaly/github-action-nixpacks@main
         with:
-          TOKEN: ${{ secrets.GH_PERSONAL_TOKEN }}
+          platforms: "linux/amd64,linux/arm64"
+          push: true
