--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
 name = "gmail_digest"
-version = "1.3.1"
-description = "Simple tool to take a CSV and a template and create drafts in your Gmail. Can be used as a command line tool, or as a library."
+version = "1.0.0"
+description = "A tool to generate a daily digest of your Gmail inbox. Helpful if you have agents working on your behalf."
 authors = ["Michael Bianco <mike@mikebian.co>"]
 license = "MIT"
 readme = "readme.md"
-homepage = "https://github.com/iloveitaly/gmail-draft-creator"
-keywords = ["gmail", "email", "gmail-api"]
+homepage = "https://github.com/iloveitaly/gmail-digest"
+keywords = ["gmail", "email", "gmail-api", "llm", "ai", "digest"]
 
 [project.urls]
-'Changelog' = 'https://github.com/iloveitaly/gmail-draft-creator/blob/master/CHANGELOG.md'
+'Changelog' = 'https://github.com/iloveitaly/gmail-digest/blob/master/CHANGELOG.md'
 
 [tool.poetry.dependencies]
 python = "^3.9"
