--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Make sure it runs
         run: |
-          poetry run ${{ github.event.repository.name }} --help
+          DIGEST_DESTINATION="" poetry run ${{ github.event.repository.name }} --help
 
       - name: Conventional Changelog Action
         id: changelog
