--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -69,6 +69,14 @@ jobs:
           body: ${{ steps.changelog.outputs.clean_changelog }}
           tag_name: ${{ steps.changelog.outputs.tag }}
 
+      - name: Login to GitHub Container Registry
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker images
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
         uses: iloveitaly/github-action-nixpacks@main
