--- a/.envrc-example
+++ b/.envrc-example
@@ -2,3 +2,4 @@ layout poetry
 
 export OPENAI_API_KEY="<your_openai_api_key>"
 export DIGEST_DESTINATION="<your_email@example.com>"
+export SCHEDULE="0 8 * * *"
