--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ funcy-pipe = "^0.11.0"
 openai = "^1.37.0"
 structlog = "^24.4.0"
 apscheduler = "^3.10.4"
+autoflake = "^2.3.1"
 
 [tool.poetry.scripts]
 gmail-digest = "gmail_digest:main"
