--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,23 +13,24 @@ keywords = ["gmail", "email", "gmail-api", "llm", "ai", "digest"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-google-api-python-client = "^2.138.0"
+google-api-python-client = "^2.140.0"
 python-decouple = "^3.8"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.1"
 click = "^8.1.7"
 markdown = "^3.6"
 funcy-pipe = "^0.11.0"
-openai = "^1.37.1"
+openai = "^1.40.1"
 structlog = "^24.4.0"
 apscheduler = "^3.10.4"
 autoflake = "^2.3.1"
+backoff = "^2.2.1"
 
 [tool.poetry.scripts]
 gmail-digest = "gmail_digest:main"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.4.2"
+black = "^24.8.0"
 isort = "^5.13.2"
 
 [build-system]
