feat: add heartbeat monitoring and enhance email digest
- Introduced heartbeat URL check using environment variable `HEARTBEAT_URL` for monitoring service health.
- Improved email digest format with better sorting and summarization, providing a clearer overview of activities.

Generated-by: aiautocommit

--- a/.envrc-example
+++ b/.envrc-example
@@ -6,3 +6,4 @@ export SCHEDULE="0 8 * * *"
 
 # optional
 export GMAIL_FILTER_SUFFIX="-from:whoever"
+export HEARTBEAT_URL="https://your-heartbeat-url.com"
